--- a/RTSP/rts_code2.ipynb
+++ b/RTSP/rts_code2.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unable to get source pad of decoder \n",
-      "Unable to get the sink pad of demux \n"
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
+      "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
+      "[__main__] [   ERROR] - pipeline'da sıkıntı var\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'link'",
+     "ename": "SystemExit",
+     "evalue": "1",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 60\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m sinkpad:\n\u001b[1;32m     59\u001b[0m     sys\u001b[39m.\u001b[39mstderr\u001b[39m.\u001b[39mwrite(\u001b[39m\"\u001b[39m\u001b[39mUnable to get the sink pad of demux \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 60\u001b[0m srcpad\u001b[39m.\u001b[39;49mlink(sinkpad)\n\u001b[1;32m     62\u001b[0m videoconvert\u001b[39m=\u001b[39mGst\u001b[39m.\u001b[39mElementFactory\u001b[39m.\u001b[39mmake(\u001b[39m'\u001b[39m\u001b[39mvideoconvert\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mconvert\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     63\u001b[0m x264enc\u001b[39m=\u001b[39mGst\u001b[39m.\u001b[39mElementFactory\u001b[39m.\u001b[39mmake(\u001b[39m'\u001b[39m\u001b[39mx264enc\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mencoder\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'link'"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
      ]
     }
    ],
@@ -39,19 +39,18 @@
     "uri_name='rtsp://127.0.0.1:8554/test'\n",
     "file='ElephantsDream.mp4'\n",
     "\n",
-    "def cb_newpad(decodebin, decoder_src_pad,data):\n",
+    "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
-    "    caps=decoder_src_pad.get_current_caps()\n",
+    "    caps=sink.get_current_caps()\n",
     "    gststruct=caps.get_structure(0)\n",
     "    gstname=gststruct.get_name()\n",
-    "    source_bin=data\n",
     "    features=caps.get_features(0)\n",
     "\n",
     "    print(\"gstname=\",gstname)\n",
     "    if(gstname.find(\"video\")!=-1):\n",
     "        print(\"features=\",features)\n",
-    "        bin_ghost_pad=source_bin.get_static_pad(\"src\")\n",
-    "        if not bin_ghost_pad.set_target(decoder_src_pad):\n",
+    "        sink_pad=sink.get_static_pad(\"video_0\")\n",
+    "        if not src.set_target(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
     "\n",
     "\n",
@@ -68,24 +67,26 @@
     "demux=Gst.ElementFactory.make(\"qtdemux\", \"demux\")\n",
     "if not demux:\n",
     "    sys.stderr.write(\" Unable to create demux \\n\")\n",
-    "demux.connect(\"pad-added\",cb_newpad)\n",
     "\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
-    "\n",
-    "source.link(demux)\n",
     "\n",
     "pipeline.add(source)\n",
     "pipeline.add(demux)\n",
     "pipeline.add(decoder)\n",
     "\n",
-    "srcpad = demux.get_request_pad(\"src\")\n",
-    "if not srcpad:\n",
-    "    sys.stderr.write(\"Unable to get source pad of decoder \\n\")\n",
+    "source.link(demux)\n",
+    "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
     "\n",
-    "sinkpad = decoder.get_static_pad(\"sink_0\")\n",
+    "\"\"\"\n",
+    "srcpad = demux.get_request_pad(\"video_0\")\n",
+    "if not srcpad:\n",
+    "    sys.stderr.write(\"Unable to get source pad of demux \\n\")\n",
+    "\n",
+    "sinkpad = decoder.get_static_pad(\"sink\")\n",
     "if not sinkpad:\n",
-    "    sys.stderr.write(\"Unable to get the sink pad of demux \\n\")\n",
+    "    sys.stderr.write(\"Unable to get the sink pad of decoder \\n\")\n",
     "srcpad.link(sinkpad)\n",
+    "\"\"\"\n",
     "\n",
     "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
     "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
@@ -103,8 +104,6 @@
     "pipeline.add(x264enc)\n",
     "pipeline.add(sink)\n",
     "\n",
-    "if source.link(demux):\n",
-    "    logger.info('src-demux Bağlandı')\n",
     "\n",
     "if decoder.link(videoconvert):\n",
     "    logger.info('decoder-videoconvert Bağlandı')\n",
