--- a/RTSP/rts_code2.ipynb
+++ b/RTSP/rts_code2.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[__main__] [    INFO] - src-demux Bağlandı\n",
       "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
       "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
       "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
@@ -22,6 +23,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fkurt/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -74,8 +83,155 @@
     "pipeline.add(demux)\n",
     "pipeline.add(decoder)\n",
     "\n",
-    "source.link(demux)\n",
+    "if source.link(demux):\n",
+    "    logger.info('src-demux Bağlandı')\n",
     "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
+    "\n",
+    "\"\"\"\n",
+    "srcpad = demux.get_request_pad(\"video_0\")\n",
+    "if not srcpad:\n",
+    "    sys.stderr.write(\"Unable to get source pad of demux \\n\")\n",
+    "\n",
+    "sinkpad = decoder.get_static_pad(\"sink\")\n",
+    "if not sinkpad:\n",
+    "    sys.stderr.write(\"Unable to get the sink pad of decoder \\n\")\n",
+    "srcpad.link(sinkpad)\n",
+    "\"\"\"\n",
+    "\n",
+    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
+    "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
+    "\n",
+    "sink=Gst.ElementFactory.make('rtspclientsink','sink')\n",
+    "if not sink:\n",
+    "    sys.stderr.write(\" Unable to create udpsink\")\n",
+    "sink.set_property(\"location\", uri_name)\n",
+    "\n",
+    "if not sink or not decoder or not videoconvert or not x264enc or not pipeline:\n",
+    "    logger.error('Elementlerde sıkıntı var...')\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "pipeline.add(videoconvert)\n",
+    "pipeline.add(x264enc)\n",
+    "pipeline.add(sink)\n",
+    "\n",
+    "\n",
+    "if decoder.link(videoconvert):\n",
+    "    logger.info('decoder-videoconvert Bağlandı')\n",
+    "if videoconvert.link(x264enc):\n",
+    "    logger.info('videoconvert-x264enc Bağlandı')\n",
+    "if x264enc.link(sink):\n",
+    "    logger.info('x264enc-sink Bağlandı')\n",
+    "\n",
+    "ret=pipeline.set_state(Gst.State.PLAYING)\n",
+    "\n",
+    "if ret==Gst.StateChangeReturn.FAILURE:\n",
+    "    logger.error(\"pipeline'da sıkıntı var\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "bus = pipeline.get_bus()\n",
+    "msg = bus.timed_pop_filtered(\n",
+    "    Gst.CLOCK_TIME_NONE, \n",
+    "    Gst.MessageType.ERROR | Gst.MessageType.EOS)\n",
+    "\n",
+    "if msg:\n",
+    "    if msg.type == Gst.MessageType.ERROR:\n",
+    "        err, debug_info = msg.parse_error()\n",
+    "        logger.error(f\"Error received from element {msg.src.get_name()}: {err.message}\")\n",
+    "        logger.error(f\"Debugging information: {debug_info if debug_info else 'none'}\")\n",
+    "\n",
+    "    elif msg.type == Gst.MessageType.EOS:\n",
+    "        logger.info(\"End-Of-Stream reached.\")\n",
+    "\n",
+    "    else:\n",
+    "        # This should not happen as we only asked for ERRORs and EOS\n",
+    "        logger.error(\"Unexpected message received.\")\n",
+    "\n",
+    "pipeline.set_state(Gst.State.NULL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
+      "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
+      "[__main__] [   ERROR] - pipeline'da sıkıntı var\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "import sys\n",
+    "import gi\n",
+    "import logging\n",
+    "\n",
+    "gi.require_version(\"GLib\", \"2.0\")\n",
+    "gi.require_version(\"GObject\", \"2.0\")\n",
+    "gi.require_version(\"Gst\", \"1.0\")\n",
+    "\n",
+    "from gi.repository import Gst, GLib, GObject\n",
+    "\n",
+    "uri_name='rtsp://127.0.0.1:8554/test'\n",
+    "file='ElephantsDream.mp4'\n",
+    "\n",
+    "def cb_newpad(demux, src, sink):\n",
+    "    print(\"In cb_newpad\\n\")\n",
+    "    caps=sink.get_current_caps()\n",
+    "    gststruct=caps.get_structure(0)\n",
+    "    gstname=gststruct.get_name()\n",
+    "    features=caps.get_features(0)\n",
+    "\n",
+    "    print(\"gstname=\",gstname)\n",
+    "    if(gstname.find(\"video\")!=-1):\n",
+    "        print(\"features=\",features)\n",
+    "        sink_pad=sink.get_static_pad(\"video_0\")\n",
+    "        if not src.set_target(sink_pad):\n",
+    "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
+    "\n",
+    "def demuxer_callback(self, demuxer, pad):\n",
+    "    if pad.get_property(\"template\").name_template == \"video_%02d\":\n",
+    "        qv_pad = self.queuev.get_pad(\"sink\")\n",
+    "        pad.link(qv_pad)\n",
+    "\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "Gst.init(None)\n",
+    "\n",
+    "pipeline=Gst.Pipeline.new('test-pipeline')\n",
+    "\n",
+    "source=Gst.ElementFactory.make('filesrc','source')\n",
+    "source.set_property('location', file)\n",
+    "\n",
+    "demux=Gst.ElementFactory.make(\"qtdemux\", \"demux\")\n",
+    "if not demux:\n",
+    "    sys.stderr.write(\" Unable to create demux \\n\")\n",
+    "\n",
+    "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
+    "\n",
+    "pipeline.add(source)\n",
+    "pipeline.add(demux)\n",
+    "pipeline.add(decoder)\n",
+    "\n",
+    "source.link(demux)\n",
+    "demux.connect(\"pad-added\", demuxer_callback)\n",
     "\n",
     "\"\"\"\n",
     "srcpad = demux.get_request_pad(\"video_0\")\n",
