--- a/RTSP/rtsp_sender_code.ipynb
+++ b/RTSP/rtsp_sender_code.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[__main__] [    INFO] - depay-decoder Bağlandı\n",
-      "[__main__] [    INFO] - decoder-sink Bağlandı\n"
+      "[__main__] [    INFO] - src-demux Bağlandı\n",
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
+      "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
+      "Failed to link decoder src pad to source bin ghost pad\n"
      ]
     },
     {
@@ -19,28 +22,12 @@
      "text": [
       "In cb_newpad\n",
       "\n",
-      "gstname= application/x-rtp\n",
-      "features= <Gst.CapsFeatures object at 0x7f84a8243b80 (GstCapsFeatures at 0x2b43100)>\n"
+      "gstname= audio/mpeg\n",
+      "In cb_newpad\n",
+      "\n",
+      "gstname= video/x-h264\n",
+      "features= <Gst.CapsFeatures object at 0x7fcbc9bfd1c0 (GstCapsFeatures at 0x7fcba0036180)>\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to link decoder src pad to source bin ghost pad\n",
-      "[__main__] [   ERROR] - Error received from element sink: Output window was closed\n",
-      "[__main__] [   ERROR] - Debugging information: xvimagesink.c(554): gst_xv_image_sink_handle_xevents (): /GstPipeline:test-pipeline/GstXvImageSink:sink\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<enum GST_STATE_CHANGE_SUCCESS of type Gst.StateChangeReturn>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -55,6 +42,7 @@
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
     "uri_name='rtsp://127.0.0.1:8554/test'\n",
+    "file='/home/fkurt/Murat/ElephantsDream.mp4'\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
@@ -64,13 +52,11 @@
     "    features=caps.get_features(0)\n",
     "\n",
     "    print(\"gstname=\",gstname)\n",
-    "    if(gstname.find(\"application\")!=-1):\n",
+    "    if(gstname.find(\"video\")!=-1):\n",
     "        print(\"features=\",features)\n",
     "        sink_pad=sink.get_static_pad(\"sink\")\n",
-    "\n",
     "        if not src.link(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
-    "\n",
     "\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
@@ -80,28 +66,55 @@
     "\n",
     "pipeline=Gst.Pipeline.new('test-pipeline')\n",
     "\n",
-    "source=Gst.ElementFactory.make('rtspsrc','source')\n",
-    "source.set_property('location', uri_name)\n",
+    "source=Gst.ElementFactory.make('filesrc','source')\n",
+    "source.set_property('location', file)\n",
     "\n",
-    "depay=Gst.ElementFactory.make(\"rtph264depay\", \"depay\")\n",
-    "\n",
-    "source.connect('pad-added', cb_newpad, depay)\n",
-    "\n",
-    "\n",
+    "demux=Gst.ElementFactory.make(\"qtdemux\", \"demux\")\n",
+    "if not demux:\n",
+    "    sys.stderr.write(\" Unable to create demux \\n\")\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
-    "sink=Gst.ElementFactory.make('xvimagesink','sink')\n",
+    "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
+    "\n",
+    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
+    "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
+    "\n",
+    "sink=Gst.ElementFactory.make('rtspclientsink','sink')\n",
+    "if not sink:\n",
+    "    sys.stderr.write(\" Unable to create udpsink\")\n",
+    "sink.set_property(\"location\", uri_name)\n",
+    "\n",
+    "if not sink or not decoder or not videoconvert or not x264enc or not pipeline:\n",
+    "    logger.error('Elementlerde sıkıntı var...')\n",
+    "    sys.exit(1)\n",
     "\n",
     "pipeline.add(source)\n",
-    "pipeline.add(depay)\n",
+    "pipeline.add(demux)\n",
     "pipeline.add(decoder)\n",
+    "pipeline.add(videoconvert)\n",
+    "pipeline.add(x264enc)\n",
     "pipeline.add(sink)\n",
     "\n",
+    "if source.link(demux):\n",
+    "    logger.info('src-demux Bağlandı')\n",
     "\n",
+    "#demux.link(decoder)\n",
+    "\"\"\"\n",
+    "srcpad = demux.get_request_pad(\"video_0\")\n",
+    "if not srcpad:\n",
+    "    sys.stderr.write(\"Unable to get source pad of demux \\n\")\n",
     "\n",
-    "if depay.link(decoder):\n",
-    "    logger.info('depay-decoder Bağlandı')\n",
-    "if decoder.link(sink):\n",
-    "    logger.info('decoder-sink Bağlandı')\n",
+    "sinkpad = decoder.get_static_pad(\"sink\")\n",
+    "if not sinkpad:\n",
+    "    sys.stderr.write(\"Unable to get the sink pad of decoder \\n\")\n",
+    "srcpad.link(sinkpad)\n",
+    "\"\"\"\n",
+    "\n",
+    "if decoder.link(videoconvert):\n",
+    "    logger.info('decoder-videoconvert Bağlandı')\n",
+    "if videoconvert.link(x264enc):\n",
+    "    logger.info('videoconvert-x264enc Bağlandı')\n",
+    "if x264enc.link(sink):\n",
+    "    logger.info('x264enc-sink Bağlandı')\n",
     "\n",
     "ret=pipeline.set_state(Gst.State.PLAYING)\n",
     "\n",
