--- a/add-source/video_add.ipynb
+++ b/add-source/video_add.ipynb
@@ -167,7 +167,131 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gi\n",
+    "gi.require_version('Gst', '1.0')\n",
+    "from gi.repository import GObject, Gst\n",
+    "from threading import Thread, Event\n",
+    "\n",
+    "Gst.init(None)\n",
+    "\n",
+    "class Main:\n",
+    "    def __init__(self):\n",
+    "        self.pipeline = Gst.Pipeline.new(\"pipeline\")\n",
+    "        self.bus = self.pipeline.get_bus()\n",
+    "        self.current_pattern_type = 0\n",
+    "\n",
+    "        self.videotestsrc = Gst.ElementFactory.make(\"videotestsrc\", \"videotestsrc\")\n",
+    "        self.videotestsrc.set_property(\"pattern\", self.current_pattern_type)\n",
+    "        self.videotestsrc_src_pad = self.videotestsrc.get_static_pad(\"src\")\n",
+    "        self.pipeline.add(self.videotestsrc)\n",
+    "\n",
+    "        self.decodebin = Gst.ElementFactory.make(\"decodebin\", \"decodebin\")\n",
+    "        self.pipeline.add(self.decodebin)\n",
+    "        self.decodebin.connect(\"pad-added\", self.decodebin_src_pad_created)\n",
+    "\n",
+    "        self.autovideosink = Gst.ElementFactory.make(\"autovideosink\", \"autovideosink\")\n",
+    "        self.pipeline.add(self.autovideosink)\n",
+    "\n",
+    "        self.videotestsrc.link(self.decodebin)\n",
+    "\n",
+    "    def decodebin_src_pad_created(self, element, pad):\n",
+    "        self.decodebin.link(self.autovideosink)\n",
+    "\n",
+    "    def custom_message(self, name):\n",
+    "        custom_structure = Gst.Structure.new_empty(name)\n",
+    "        custom_message = Gst.Message.new_application(None, custom_structure)\n",
+    "        self.bus.post(custom_message)\n",
+    "\n",
+    "    def change_source(self):\n",
+    "        while not self.stop_event.is_set():\n",
+    "            self.stop_event.wait(1)\n",
+    "\n",
+    "            if self.stop_event.is_set():\n",
+    "                break\n",
+    "\n",
+    "            self.custom_message(\"start_switch\")\n",
+    "\n",
+    "    def videotestsrc_probe_callback(self, pad, info):\n",
+    "        if self.start_switch:\n",
+    "            if not self.videotestsrc_do_switch_sent:\n",
+    "                self.videotestsrc_drop = True\n",
+    "                self.custom_message(\"do_switch\")\n",
+    "\n",
+    "            return Gst.PadProbeReturn.DROP\n",
+    "        else:\n",
+    "            self.videotestsrc_do_switch_sent = False\n",
+    "            self.videotestsrc_drop = False\n",
+    "            pad.remove_probe(info.id)\n",
+    "            return Gst.PadProbeReturn.OK\n",
+    "\n",
+    "    def decodebin_probe_callback(self, pad, info):\n",
+    "        if self.start_switch:\n",
+    "            if not self.decodebin_do_switch_sent:\n",
+    "                self.decodebin_drop = True\n",
+    "                self.custom_message(\"do_switch\")\n",
+    "\n",
+    "            return Gst.PadProbeReturn.DROP\n",
+    "        else:\n",
+    "            self.decodebin_do_switch_sent = False\n",
+    "            self.decodebin_drop = False\n",
+    "            pad.remove_probe(info.id)\n",
+    "            return Gst.PadProbeReturn.OK\n",
+    "\n",
+    "    def run(self):\n",
+    "        self.pipeline.set_state(Gst.State.PLAYING)\n",
+    "\n",
+    "        self.stop_event = Event()\n",
+    "        self.change_source_thread = Thread(target=self.change_source)\n",
+    "        self.change_source_thread.start()\n",
+    "\n",
+    "        self.start_switch = False\n",
+    "        self.videotestsrc_drop = False\n",
+    "        self.decodebin_drop = False\n",
+    "\n",
+    "        while True:\n",
+    "            try:\n",
+    "                message = self.bus.timed_pop(Gst.SECOND)\n",
+    "\n",
+    "                if message == None:\n",
+    "                    pass\n",
+    "                elif message.type == Gst.MessageType.APPLICATION:\n",
+    "                    if message.get_structure().get_name() == \"start_switch\":\n",
+    "                        self.start_switch = True\n",
+    "                        self.videotestsrc_do_switch_sent = False\n",
+    "                        self.decodebin_do_switch_sent = False\n",
+    "                        self.videotestsrc.get_static_pad(\"src\").add_probe(Gst.PadProbeType.BLOCK, self.videotestsrc_probe_callback)\n",
+    "                        self.decodebin.get_static_pad(\"src_0\").add_probe(Gst.PadProbeType.BLOCK, self.decodebin_probe_callback)\n",
+    "                    elif message.get_structure().get_name() == \"do_switch\":\n",
+    "                        if self.videotestsrc_drop and self.decodebin_drop:\n",
+    "                            # Remove old videotestsrc.\n",
+    "                            self.videotestsrc.set_state(Gst.State.NULL)\n",
+    "                            self.videotestsrc.unlink(self.decodebin)\n",
+    "                            self.pipeline.remove(self.videotestsrc)\n",
+    "                            del self.videotestsrc\n",
+    "\n",
+    "                            # Create new videotestsrc.\n",
+    "                            self.videotestsrc = Gst.ElementFactory.make(\"videotestsrc\", \"videotestsrc\")\n",
+    "                            self.current_pattern_type = int(not(self.current_pattern_type))\n",
+    "                            self.videotestsrc.set_property(\"pattern\", self.current_pattern_type)\n",
+    "                            self.pipeline.add(self.videotestsrc)\n",
+    "                            self.videotestsrc.link(self.decodebin)\n",
+    "                            self.videotestsrc.set_state(Gst.State.PLAYING)\n",
+    "\n",
+    "                            self.start_switch = False\n",
+    "                elif message.type == Gst.MessageType.EOS:\n",
+    "                    break\n",
+    "                elif message.type == Gst.MessageType.ERROR:\n",
+    "                    break\n",
+    "            except KeyboardInterrupt:\n",
+    "                break\n",
+    "\n",
+    "        self.stop_event.set()\n",
+    "        self.pipeline.set_state(Gst.State.NULL)\n",
+    "\n",
+    "start = Main()\n",
+    "start.run()"
+   ]
   }
  ],
  "metadata": {
