--- a/add-source/video_add.ipynb
+++ b/add-source/video_add.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "In cb_newpad\n",
       "\n",
       "gstname= video/x-h264\n",
-      "features= <Gst.CapsFeatures object at 0x7f6d0cd0cd60 (GstCapsFeatures at 0x7f6b8c003740)>\n"
+      "features= <Gst.CapsFeatures object at 0x7f42b82b0ca0 (GstCapsFeatures at 0x7f4280036880)>\n"
      ]
     },
     {
@@ -262,6 +262,8 @@
     "                        self.decodebin_do_switch_sent = False\n",
     "                        self.videotestsrc.get_static_pad(\"src\").add_probe(Gst.PadProbeType.BLOCK, self.videotestsrc_probe_callback)\n",
     "                        self.decodebin.get_static_pad(\"src_0\").add_probe(Gst.PadProbeType.BLOCK, self.decodebin_probe_callback)\n",
+    "                    \n",
+    "                    \n",
     "                    elif message.get_structure().get_name() == \"do_switch\":\n",
     "                        if self.videotestsrc_drop and self.decodebin_drop:\n",
     "                            # Remove old videotestsrc.\n",
