--- a/NotesMixed.ipynb
+++ b/NotesMixed.ipynb
@@ -10,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,8 +27,7 @@
     "\n",
     "\n",
     "### RTSP Görüntüsü Alıyor, \n",
-    "gst-launch-1.0 rtspsrc location=\"rtsp://freja.hiof.no:1935/rtplive/_definst_/hessdalen03.stream\" ! \\ \n",
-    "rtph264depay ! avdec_h264 ! clockoverlay ! Autovideosink \n",
+    "gst-launch-1.0 rtspsrc location=\"rtsp://freja.hiof.no:1935/rtplive/_definst_/hessdalen03.stream\" ! rtph264depay ! avdec_h264 ! clockoverlay ! autovideosink \n",
     "\n",
     "\n"
    ]
