--- a/RTSP/camera_broadcast/cam_reciever.ipynb
+++ b/RTSP/camera_broadcast/cam_reciever.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
       "In cb_newpad\n",
       "\n",
       "gstname= application/x-rtp\n",
-      "features= <Gst.CapsFeatures object at 0x7f84a8243b80 (GstCapsFeatures at 0x2b43100)>\n"
+      "features= <Gst.CapsFeatures object at 0x7f6bbd097400 (GstCapsFeatures at 0x7f6bb8067a20)>\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
        "<enum GST_STATE_CHANGE_SUCCESS of type Gst.StateChangeReturn>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,6 +89,12 @@
     "\n",
     "\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
+    "\n",
+    "decoder.set_property('output-corrupt','false')\n",
+    "decoder.set_property('debug-mv','true')\n",
+    "decoder.set_property('direct-rendering','true')\n",
+    "decoder.set_property('skip-frame','5')\n",
+    "\n",
     "sink=Gst.ElementFactory.make('xvimagesink','sink')\n",
     "\n",
     "pipeline.add(source)\n",
@@ -140,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
