--- a/RTSP/camera_broadcast/cam_sender.ipynb
+++ b/RTSP/camera_broadcast/cam_sender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,12 @@
      "output_type": "stream",
      "text": [
       "[__main__] [    INFO] - depay-decoder Bağlandı\n",
-      "[__main__] [    INFO] - decoder-sink Bağlandı\n"
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
+      "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
+      "[__main__] [   ERROR] - Error received from element source: Internal data stream error.\n",
+      "[__main__] [   ERROR] - Debugging information: gstrtspsrc.c(6057): gst_rtspsrc_loop (): /GstPipeline:test-pipeline/GstRTSPSrc:source:\n",
+      "streaming stopped, reason not-linked (-1)\n"
      ]
     },
     {
@@ -19,28 +24,8 @@
      "text": [
       "In cb_newpad\n",
       "\n",
-      "gstname= application/x-rtp\n",
-      "features= <Gst.CapsFeatures object at 0x7f84a8243b80 (GstCapsFeatures at 0x2b43100)>\n"
+      "gstname= application/x-rtp\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to link decoder src pad to source bin ghost pad\n",
-      "[__main__] [   ERROR] - Error received from element sink: Output window was closed\n",
-      "[__main__] [   ERROR] - Debugging information: xvimagesink.c(554): gst_xv_image_sink_handle_xevents (): /GstPipeline:test-pipeline/GstXvImageSink:sink\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<enum GST_STATE_CHANGE_SUCCESS of type Gst.StateChangeReturn>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -54,7 +39,8 @@
     "\n",
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
-    "uri_name='rtsp://127.0.0.1:8554/test'\n",
+    "src_uri='rtsp://admin:123456@37.202.49.154:49675/h264'\n",
+    "sink_uri='rtsp://127.0.0.1:8554/test'\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
@@ -64,13 +50,12 @@
     "    features=caps.get_features(0)\n",
     "\n",
     "    print(\"gstname=\",gstname)\n",
-    "    if(gstname.find(\"application\")!=-1):\n",
+    "    if(gstname.find(\"video\")!=-1):\n",
     "        print(\"features=\",features)\n",
     "        sink_pad=sink.get_static_pad(\"sink\")\n",
-    "\n",
-    "        if not src.link(sink_pad):\n",
+    "        src_pad=src.get_request_pad('stream_0')\n",
+    "        if not src_pad.link(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
-    "\n",
     "\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
@@ -81,27 +66,43 @@
     "pipeline=Gst.Pipeline.new('test-pipeline')\n",
     "\n",
     "source=Gst.ElementFactory.make('rtspsrc','source')\n",
-    "source.set_property('location', uri_name)\n",
+    "source.set_property('location', src_uri)\n",
     "\n",
     "depay=Gst.ElementFactory.make(\"rtph264depay\", \"depay\")\n",
-    "\n",
     "source.connect('pad-added', cb_newpad, depay)\n",
     "\n",
-    "\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
-    "sink=Gst.ElementFactory.make('xvimagesink','sink')\n",
+    "\n",
+    "\n",
+    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
+    "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
+    "\n",
+    "sink=Gst.ElementFactory.make('rtspclientsink','sink')\n",
+    "if not sink:\n",
+    "    sys.stderr.write(\" Unable to create udpsink\")\n",
+    "sink.set_property(\"location\", sink_uri)\n",
+    "\n",
+    "if not sink or not decoder or not videoconvert or not x264enc or not pipeline:\n",
+    "    logger.error('Elementlerde sıkıntı var...')\n",
+    "    sys.exit(1)\n",
     "\n",
     "pipeline.add(source)\n",
     "pipeline.add(depay)\n",
     "pipeline.add(decoder)\n",
+    "pipeline.add(videoconvert)\n",
+    "pipeline.add(x264enc)\n",
     "pipeline.add(sink)\n",
-    "\n",
-    "\n",
     "\n",
     "if depay.link(decoder):\n",
     "    logger.info('depay-decoder Bağlandı')\n",
-    "if decoder.link(sink):\n",
-    "    logger.info('decoder-sink Bağlandı')\n",
+    "\n",
+    "\n",
+    "if decoder.link(videoconvert):\n",
+    "    logger.info('decoder-videoconvert Bağlandı')\n",
+    "if videoconvert.link(x264enc):\n",
+    "    logger.info('videoconvert-x264enc Bağlandı')\n",
+    "if x264enc.link(sink):\n",
+    "    logger.info('x264enc-sink Bağlandı')\n",
     "\n",
     "ret=pipeline.set_state(Gst.State.PLAYING)\n",
     "\n",
@@ -140,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
