--- a/RTSP/camera_broadcast/cam_sender.ipynb
+++ b/RTSP/camera_broadcast/cam_sender.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
-    "src_uri='rtsp://admin:123456@37.202.49.154:49675/h264'\n",
+    "src_uri=''\n",
     "sink_uri='rtsp://127.0.0.1:8554/test'\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
