--- a/Sunum/comp/deneme.ipynb
+++ b/Sunum/comp/deneme.ipynb
@@ -129,7 +129,8 @@
     "for name,props in enc_prop_comp.items():\n",
     "    for prop in props:\n",
     "        os.system(f'gst-launch-1.0 filesrc location={video_name} ! qtdemux ! avdec_h264 ! x264enc {name}={prop} ! mp4mux ! filesink location=video.mp4')\n",
-    "        results[f'{name}_{prop}']='{0:.3f} MegaBytes'.format(os.stat(\"video.mp4\").st_size/(1024*1024))\n"
+    "        results[f'{name}_{prop}']='{0:.3f} MegaBytes'.format(os.stat(\"video.mp4\").st_size/(1024*1024))\n",
+    "        \n"
    ]
   },
   {
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +296,175 @@
     "    'b-pyramid':['true','false']\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Özellik_1</th>\n",
+       "      <th>Özellik_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>vbv-buffer-ca</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trellis</th>\n",
+       "      <td>true</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sync-lookahead</th>\n",
+       "      <td>100</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quantizer</th>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qp-min</th>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qp-max</th>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ip-factor</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b-pyramid</th>\n",
+       "      <td>true</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Özellik_1 Özellik_2\n",
+       "vbv-buffer-ca          0      1000\n",
+       "trellis             true     false\n",
+       "sync-lookahead       100       250\n",
+       "quantizer              0        50\n",
+       "qp-min                10        51\n",
+       "qp-max                10        51\n",
+       "ip-factor              0         2\n",
+       "b-pyramid           true     false"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.DataFrame.from_dict(add_enc_prop_comp,orient='index',columns=['Özellik_1','Özellik_2'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Özellik_1</th>\n",
+       "      <th>Özellik_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Özellik_1 Özellik_2\n",
+       "0                    "
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.DataFrame(columns=['Özellik_1','Özellik_2'])\n",
+    "df.loc[len(df)]={'Özellik_1':'','Özellik_2':''}\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.from"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
